--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -50,7 +50,7 @@
               <mat-error *ngIf="formConsumerGroup.controls['age_consumer_to'].hasError('required') && formConsumerGroup.controls['age_consumer_to'].touched">
                 Sampai harus diisi
               </mat-error>
-              <mat-error *ngIf="formConsumerGroup.controls['age_consumer_from'].hasError('min') && formConsumerGroup.get('age_consumer_to').touched">
+              <mat-error *ngIf="formConsumerGroup.controls['age_consumer_to'].hasError('min') && formConsumerGroup.get('age_consumer_to').touched">
                 Tidak boleh kurang dari minimal batasan umur yg telah di isi
               </mat-error>
             </mat-form-field>
