--- a/src/app/pages/b2c-voucher/edit/tab/penukaran-voucher/penukaran-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/penukaran-voucher/penukaran-voucher.component.html
@@ -120,7 +120,7 @@
     </form>
   </div>
 
-    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail">
+    <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail && detailVoucher?.is_enable_reimburse">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
         (click)="onUpdate()">
         SIMPAN
