feat: CDE 2564 B2C EVoucher Phase 1 - bugs panel consumer

--- a/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
+++ b/src/app/pages/b2c-voucher/index/list-voucher-reimbursement/list-voucher-reimbursement.component.html
@@ -86,6 +86,7 @@
         [sorts]="[{ prop: 'name', dir: 'asc' }]"
         (sort)="onSort($event)"
         [scrollbarH]="true"
+        [loadingIndicator]="loadingIndicator"
         fusePerfectScrollbar
       >
         <ngx-datatable-column name="No" [sortable]="false" [width]="50">
