--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -70,9 +70,9 @@
 
         </div>
         
-        <div fxFlex="45">
+        <div fxFlex="45" *ngIf="isVoucherAutomation.value === true">
 
-          <div class="pb-16 px-12" *ngIf="isVoucherAutomation.value === true">
+          <div class="pb-16 px-12">
             <mat-radio-group formControlName="va" class="radio-group">
               <mat-radio-button class="radio-button" *ngFor="let item of listVA" [value]="item.value">
                 {{item.name}}
