--- a/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
+++ b/src/app/pages/b2c-voucher/index/b2c-voucher-index.component.html
@@ -10,7 +10,7 @@
   </page-content-header>
   <!-- / HEADER -->
 
-  <div class="content p-24">
+  <div class="content p-24" *ngIf="!onLoad">
     <mat-tab-group>
       <mat-tab label="Inject B2C Voucher">
         <div class="table-wrapper">
@@ -105,5 +105,8 @@
         <app-list-voucher-reimbursement></app-list-voucher-reimbursement>
       </mat-tab>
     </mat-tab-group>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center center" *ngIf="onLoad">
+    <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'"></mat-progress-bar>
   </div>
 </div>
