--- a/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
+++ b/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
@@ -46,7 +46,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of rows" [ngClass]="!item.is_valid? 'invalid-row' : ''">
+          <tr *ngFor="let item of rows" [ngStyle]="{ 'background-color': setRedIfDuplicate(item)}">
             <td nowrap>
               {{ item.name ? item.name : '-' }}
             </td>
