--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -105,7 +105,7 @@
               <div fxFlex="50">
                 <h3 class="">&nbsp;</h3>
               </div>
-              <div *ngIf="!isDetail" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
+              <div *ngIf="!isDetail && detailVoucher?.is_enable_panel_customer" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
                 <button *ngIf="formConsumerGroup.get('areas').value.length === 1 || i === (formConsumerGroup.get('areas').value.length - 1)" mat-raised-button type="button" (click)="addArea()">
                   <mat-icon>add</mat-icon>
                 </button>
