--- a/src/app/pages/dte/audience/edit/audience-edit.component.html
+++ b/src/app/pages/dte/audience/edit/audience-edit.component.html
@@ -283,14 +283,14 @@
         [rowIdentity]="getId" (sort)="onSort($event)" fusePerfectScrollbar>
         <!-- <ngx-datatable-column [width]="68" *ngIf="formAudience.get('limit').value !== 'pick-all'" [canAutoResize]="false"
           [sortable]="true" [draggable]="false" [resizeable]="false" [headerCheckboxable]="true">
-          <!-- <ng-template ngx-datatable-header-template >
+          <ng-template ngx-datatable-header-template >
             <mat-checkbox 
               [checked]="allRowsSelected" 
               (change)="selectFn(!allRowsSelected);"
               *ngIf="!isDetail"
             >
             </mat-checkbox>
-          </ng-template> -->
+          </ng-template> 
 
           <ng-template
             ngx-datatable-cell-template
@@ -305,12 +305,12 @@
               *ngIf="!allRowsSelected"
             >
             </mat-checkbox>
-            <!-- <mat-checkbox 
+            <mat-checkbox 
               [checked]="true" 
               [disabled]="allRowsSelected && isDetail || formAudience.get('limit').value === 'pick-all' && isDetail" 
               *ngIf="allRowsSelected" class="mat-checkbox-all"
             >
-            </mat-checkbox> -->
+            </mat-checkbox>
           </ng-template>
         </ngx-datatable-column> -->
         <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
