feat: CDE 2564 B2C EVoucher Phase 1 - changes endpoint B2C - adjustment B2B Voucher behavior event B2C is true

--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -28,7 +28,7 @@
                 <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
                   <span>Pilih dari</span>
                   <mat-checkbox class="mt-4 ml-4 mb-8"
-                    [formControl]="isB2CVoucher">
+                    [formControl]="isB2CVoucher" (change)="onChangeIsB2CVoucher($event)">
                     B2C Voucher</mat-checkbox>
                 </div>
 
