--- a/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
+++ b/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
@@ -89,7 +89,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of rows">
+          <tr *ngFor="let item of rows" [ngStyle]="{ 'background-color': setRedIfDuplicate(item)}">
             <td nowrap>
               {{ item.name ? item.name : '-' }}
             </td>
