--- a/src/app/pages/call-objective/component/list-call-objective.component.html
+++ b/src/app/pages/call-objective/component/list-call-objective.component.html
@@ -7,7 +7,7 @@
     </button>
   </page-content-header>
   <!-- / HEADER -->
-  <div class="content p-24" *ngIf="!onLoad">
+  <div class="content p-24">
     <div class="table-wrapper">
       <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
         class="p-16 export">
