--- a/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
+++ b/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
@@ -245,7 +245,7 @@
               </mat-select>
             </mat-form-field>
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select  placeholder="Status" formControlName="status" multiple>
+              <mat-select  placeholder="Status" [(ngModel)] = "statusValue" name = "statusValue"  [ngModelOptions]="{standalone: true}" multiple>
                 <mat-option [value]="wtLoop.value" *ngFor="let wtLoop of status"> {{wtLoop.label}} </mat-option>
               </mat-select>
             </mat-form-field>
