fixing typo binding data in import retailer

--- a/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
+++ b/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
@@ -55,7 +55,7 @@
               {{ item.is_chat_bot === 1 ? "ON" : "OFF" }}
             </td>
             <td nowrap>
-              {{row.gsr_flag === 1 ? 'On' : 'Off'}}
+              {{item.gsr_flag === 1 ? 'On' : 'Off'}}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
